<resources>
    <string name="app_name">calculadoraDeJuros</string>

    <string name="applicationTitle">Calculora de Juros</string>
    <string name="radioBtnValue1">Composto</string>
    <string name="radioBtnValue2">Simples</string>

    <string name="hintCapital">Dinheiro a ser investido</string>
    <string name="hintTempo">Tempo (anos)</string>
    <string name="hintTax">Taxa de juros (ao ano)</string>

    <string name="btnText">Calcular</string>
    <string name="imageViewDescription">Logo dinheiro</string>
</resources>